[tool.poetry]
name = "autocaption"
version = "0.1.0"
description = "Automatically transcribe audio/visual files to a variety of subtitle formats."
authors = ["Daniel Maxwell-Ross <daniel@maxwell-ross.us>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
